2012-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-get-new-news): Respect
	`gnus-group-use-permanent-levels', as documented (bug#11638).

2012-06-10  Dave Abrahams  <dave@boostpro.com>

	* gnus-int.el (gnus-warp-to-article): Limit registry warping to real
	groups (bug#11641).

2012-06-10  Toke Høiland-Jørgensen  <toke@toke.dk>  (tiny change)

	* nnmaildir.el (nnmaildir-request-expire-articles): Ensure that `time'
	is an integer to avoid later problems.

2012-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el: Add a iso-8859-1 cookie to make stuff work under other
	locales.

	* mm-decode.el (mm-display-part): Dissect archives when hitting `RET'
	on a handle.

	* gnus-sum.el (gnus-summary-limit-to-author): Use the current From
	address as the default.
	(gnus-summary-insert-old-articles): Don't include unexistent messages.

	* nnfolder.el (nnfolder-save-buffer): Delete old versions silently.  It
	makes no sense to query the user about internal files.

	* gnus-spec.el: Remove all the byte-compilation stuff, since
	benchmarking shows that it doesn't help when entering large summary
	buffers.

	* gnus-xmas.el (gnus-xmas-define): Remove.

	* gnus-util.el (gnus-byte-code): Remove.

	* gnus-spec.el (gnus-update-format-specifications): Remove outdated
	grouplens stuff.

2012-06-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-msg-mail): Warn the user about Gnus not running
	(bug#11514).

2012-06-07  Stephen Eglen  <S.J.Eglen@damtp.cam.ac.uk>

	* message.el (message-buffers): Return all buffers derived from Message
	to make `gnus-dired-attach' work with mu4e.

2012-06-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nntp.el: Stop the `letf' madness.
	(nntp--report-1): New var.
	(nntp-report): Merge nntp-report-1 into it.
	(nntp-with-open-group-function): Set nntp--report-1 instead of modifying
	the nntp-report function.

	* auth-source.el: Fix comment-style to follow the convention.
